# Syncthing-Select-Sync

./: .gitignore  LICENSE  README.md
docs/: add-user.md  delete-user.md  main-docs.md  update-password.md  update-site-settings.md
syncthing-select-sync-client/: Cargo.toml
syncthing-select-sync-client/html/: home.html  items.html
syncthing-select-sync-client/src/: main.rs  structs.rs
syncthing-select-sync-client/src/database/: db.rs
syncthing-select-sync-server/: Cargo.toml
syncthing-select-sync-server/docs/: client_connection.md  get-allowed-folders.md  get-ssss-itmes.md  login.md  update-user.md
syncthing-select-sync-server/html/: home.html  login.html
syncthing-select-sync-server/src/: guest.rs  main.rs  out.rs  structs.rs
syncthing-select-sync-server/src/database/: create_user.rs  db.rs  mod.rs
syncthing-select-sync-server/stignore/: Jarom.Rust Projects.stignore
