[package]
name = "syncthing-select-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "*", features = ["json", "gzip", "cookies"] }
flume = "*"
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
sha2 = "*"
rusqlite = { version = "*", features = ["bundled"] }
http = "*"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
tower-sessions = { version = "0.7.0", features = ["memory-store"] }
uuid = "*"
dirs = "*"
colored = "*"
chrono = "*"