[package]
name = "syncthing-select-sync-server"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "*", features = ["json", "gzip", "cookies"] }
rusqlite = { version = "*", features = ["bundled"] }
tokio = { version = "*", features = ["full"] }
axum = "0.7"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
sha2 = "*"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
tower-sessions = { version = "0.7.0", features = ["memory-store"] }
http = "*"
uuid = "*"
rand = "*"
base64 = "*"
dirs = "*"
colored = "*"
chrono = "*"